--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 
   <h2>What I do</h2>
 
-  <p>I like to knock stuff off of tables.</p>
+  <p>I like to knock stuff off of tables. Like this!</p>
+
+  <div class="table">
+    <div class="table-leg-1"></div>
+    <div class="table-leg-2"></div>
+    <div class="thing-on-table"></div>
+  </div>
 </body>
 </html>
