--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style-dark.css">
+
+  <script
+    src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="js/scripts.js"
+    type="text/javascript"
+  ></script>
+
   <title>All about cat</title>
 </head>
+
 <body>
+  <button class="toggle-theme">Toggle Theme</button>
+
   <h1>All About Cat</h1>
 
   <p>
